Change URLs to Xfce's goodies wiki

--- a/README
+++ b/README
@@ -30,13 +30,13 @@ xinerama (for multi-monitor support)
 Homepage
 ========
 
-The homepage of xfdashboard is at http://xfdashboard.froevel.de/        
+The homepage of xfdashboard is at http://goodies.xfce.org/projects/applications/xfdashboard/start
 
 
 Documentation
 =============
 
-A simple quick guide with screenshots can be found at http://xfdashboard.froevel.de/doc.html
+A simple quick guide with screenshots can be found at http://goodies.xfce.org/projects/applications/xfdashboard/manual
 
 Documentation about theming xfdashboard can be found at http://xfdashboard.froevel.de/theming.html
 
