Correct library names in optional dependencies

--- a/README
+++ b/README
@@ -22,9 +22,9 @@ gtk+ >= 3.2
 
 The following libraries are optional:
 
-xcomposite >= 0.2 (for live windows)
-xdamage (for live windows)
-xinerama (for multi-monitor support)
+libXcomposite >= 0.2 (for live windows)
+libXdamage (for live windows)
+libXinerama (for multi-monitor support)
 
 
 Homepage
