Add session management to xfdashboard to restart it if it crashes
This fixes bug report #12143

--- a/README
+++ b/README
@@ -17,6 +17,7 @@ dbus-glib >= 0.98
 garcon >= 0.2.0
 gtk+ >= 3.2
 libxfce4util >= 4.10.0
+libxfce4ui >= 4.10.0
 
 ... and the dependencies of these libraries of course ;)
 
