--- a/po/es.po
+++ b/po/es.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: xfdashboard\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-09-08 06:36+0200\n"
-"PO-Revision-Date: 2015-09-17 18:57+0000\n"
+"PO-Revision-Date: 2015-10-07 22:52+0000\n"
 "Last-Translator: Miguel Hernández <michelangelo93@gmail.com>\n"
 "Language-Team: Spanish (http://www.transifex.com/xfdashboard/xfdashboard/language/es/)\n"
 "MIME-Version: 1.0\n"
@@ -83,21 +83,21 @@ msgstr ""
 msgid ""
 "This release hopefully fixes problems with the stage resizes finally. Also "
 "the method to determine the desktop window was changed."
-msgstr ""
+msgstr "Esta versión corrige finalmente los problemas con el cambio de tamaño del escenario. También el método para determinar la ventana del escritorio que ha cambiado."
 
 #: ../data/appdata/xfdashboard.appdata.xml.in.h:9
 msgid ""
 "This release hopefully fixes problems with the stage as it size might not "
 "reflect the screen size preventing dragging windows over the whole screen. "
 "It also includes lots of smaller bug-fixes."
-msgstr ""
+msgstr "Esta versión corrige problemas como que el tamaño no pueda reflejar el tamaño de la ventana previniendo arrastrar las ventanas por toda la pantalla. También incluye muchas correcciones de errores pequeñas."
 
 #: ../data/appdata/xfdashboard.appdata.xml.in.h:10
 msgid ""
 "This stable version introduces lots of new features. like multi-monitor "
 "support, configurable key bindings and a settings dialog. It also contains a"
 " lot of other larger and smaller improvements."
-msgstr ""
+msgstr "Esta versión de desarrollo estable introduce un montón de nuevas características: soporte multi-monitor, atajos de teclado configurables y un diálogo de ajustes. También contiene muchas otras grandes y pequeñas mejoras."
 
 #: ../data/appdata/xfdashboard.appdata.xml.in.h:11
 msgid ""
@@ -110,30 +110,30 @@ msgstr ""
 msgid ""
 "This unstable development introduces support for multiple monitors and also "
 "bug-fixes and other smaller improvements."
-msgstr ""
+msgstr "Esta versión de desarrollo inestable introduce el soporte de múltiples monitores, correcciones de errores y otras pequeñas mejoras."
 
 #: ../data/appdata/xfdashboard.appdata.xml.in.h:13
 msgid ""
 "This unstable development introduces an application database and monitoring "
 "of installed and uninstalled applications. It also includes bug-fixes and "
 "other smaller improvements."
-msgstr ""
+msgstr "Esta versión de desarrollo inestable introduce una aplicación de base de datos y monitorización de las aplicaciones instaladas y desinstaladas. También incluye correcciones de errores y otras pequeñas mejoras."
 
 #: ../data/appdata/xfdashboard.appdata.xml.in.h:14
 msgid ""
 "This unstable development introduces a hotkey tracker to allow starting "
 "xfdashboard with a single press of &lt;Super&gt; key."
-msgstr ""
+msgstr "Esta versión de desarrollo inestable introduce un rastreador de atajos para permitir iniciar xfdashboard con la pulsación de la tecla &lt;Super&gt;."
 
 #: ../data/appdata/xfdashboard.appdata.xml.in.h:15
 msgid ""
 "This unstable development fixes a bug which rendered the new settings "
 "application completely unusable."
-msgstr ""
+msgstr "Esta versión de desarrollo inestable corrige un error que hacía que la nueva aplicación de ajustes quedará totalmente inutilizable."
 
 #: ../data/appdata/xfdashboard.appdata.xml.in.h:16
 msgid "This unstable development introduces a settings application."
-msgstr ""
+msgstr "Esta versión de desarrollo inestable introduce una aplicación de ajustes"
 
 #: ../data/appdata/xfdashboard.appdata.xml.in.h:17
 msgid ""
@@ -2908,115 +2908,115 @@ msgstr ""
 #: ../xfdashboard/window-content.c:1378
 #, c-format
 msgid "Could not get attributes of window '%s'"
-msgstr ""
+msgstr "No se pudieron obtener los atributos de la ventana '%s'"
 
 #: ../xfdashboard/window-content.c:1443
 #, c-format
 msgid "Destroying window content cache still containing %d windows."
-msgstr ""
+msgstr "La destrucción del contenido caché de ventana todavía contiene %d ventanas."
 
 #: ../xfdashboard/window-content.c:2076
 msgid "The window to handle and display"
-msgstr ""
+msgstr "La ventana para manejar y mostrar"
 
 #: ../xfdashboard/window-content.c:2082
 msgid "Suspended"
-msgstr ""
+msgstr "Suspendido"
 
 #: ../xfdashboard/window-content.c:2083
 msgid "Is this window suspended"
-msgstr ""
+msgstr "Esta ventana está suspendida"
 
 #: ../xfdashboard/window-content.c:2090
 msgid "Color to draw outline of mapped windows with"
-msgstr ""
+msgstr "Color para dibujar los contornos representados con ventanas"
 
 #: ../xfdashboard/window-content.c:2097
 msgid "Width of line used to draw outline of mapped windows"
-msgstr ""
+msgstr "Ancho de línea usado para dibujar el contorno de las ventanas representadas"
 
 #: ../xfdashboard/window-content.c:2104
 msgid "Include window frame"
-msgstr ""
+msgstr "Incluir marco de ventana"
 
 #: ../xfdashboard/window-content.c:2105
 msgid ""
 "Whether the window frame should be included or only the window content "
 "should be shown"
-msgstr ""
+msgstr "Si el marco de la ventana debe ser incluido o solo el contenido de la ventana debe ser mostrado"
 
 #: ../xfdashboard/window-content.c:2111
 msgid "Unmapped window icon X fill"
-msgstr ""
+msgstr "Icono de ventana sin asignar de relleno X"
 
 #: ../xfdashboard/window-content.c:2112
 msgid "Whether the unmapped window icon should fill up horizontal space"
-msgstr ""
+msgstr "Si el icono de la ventana sin asignar debe rellenar el espacio horizontal"
 
 #: ../xfdashboard/window-content.c:2118
 msgid "Unmapped window icon y fill"
-msgstr ""
+msgstr "Icono de ventana sin asignar de relleno Y"
 
 #: ../xfdashboard/window-content.c:2119
 msgid "Whether the unmapped window icon should fill up vertical space"
-msgstr ""
+msgstr "Si el icono de la ventana sin asignar debe rellenar el espacio vertical"
 
 #: ../xfdashboard/window-content.c:2125
 msgid "Unmapped window icon X align"
-msgstr ""
+msgstr "Icono de ventana sin asignar de alineación X"
 
 #: ../xfdashboard/window-content.c:2126
 msgid ""
 "The alignment of the unmapped window icon on the X axis within the "
 "allocation in normalized coordinate between 0 and 1"
-msgstr ""
+msgstr "La alineación del icono de la ventana sin asignar en el eje X en la asignación de coordenadas normalizadas entre 0 y 1"
 
 #: ../xfdashboard/window-content.c:2133
 msgid "Unmapped window icon Y align"
-msgstr ""
+msgstr "Icono de ventana sin asignar de alineación Y"
 
 #: ../xfdashboard/window-content.c:2134
 msgid ""
 "The alignment of the unmapped window icon on the Y axis within the "
 "allocation in normalized coordinate between 0 and 1"
-msgstr ""
+msgstr "La alineación del icono de la ventana sin asignar en el eje Y en la asignación de coordenadas normalizadas entre 0 y 1"
 
 #: ../xfdashboard/window-content.c:2141
 msgid "Unmapped window icon X scale"
-msgstr ""
+msgstr "Icono de ventana sin asignar de escala X"
 
 #: ../xfdashboard/window-content.c:2142
 msgid "Scale factor of unmapped window icon on the X axis"
-msgstr ""
+msgstr "Factor de escala del icono de ventana sin asignar en el eje Y"
 
 #: ../xfdashboard/window-content.c:2149
 msgid "Unmapped window icon Y scale"
-msgstr ""
+msgstr "Icono de ventana sin asignar de escala Y"
 
 #: ../xfdashboard/window-content.c:2150
 msgid "Scale factor of unmapped window icon on the Y axis"
-msgstr ""
+msgstr "Factor de escala del icono de ventana sin asignar en el eje Y"
 
 #: ../xfdashboard/window-content.c:2157
 msgid "Unmapped window icon anchor point"
-msgstr ""
+msgstr "Punto de anclaje del icono de ventana sin asignar"
 
 #: ../xfdashboard/window-content.c:2158
 msgid "The anchor point of unmapped window icon"
-msgstr ""
+msgstr "El punto de anclaje del icono de ventana sin asignar"
 
 #: ../xfdashboard/windows-view.c:1496
 #, c-format
 msgid "Cannot activate selection of type %s at %s because expecting type %s"
-msgstr ""
+msgstr "No se puede activar la selección de tipo %s en %s porque se espera un tipo %s"
 
 #: ../xfdashboard/windows-view.c:1690
 msgid "Current workspace"
-msgstr ""
+msgstr "Espacio de trabajo actual"
 
 #: ../xfdashboard/windows-view.c:1691
 msgid "The current workspace whose windows are shown"
-msgstr ""
+msgstr "El espacio de trabajo actual cuyas ventanas son mostradas"
 
 #: ../xfdashboard/windows-view.c:1706
 msgid ""
@@ -3025,20 +3025,20 @@ msgstr ""
 
 #: ../xfdashboard/windows-view.c:1712
 msgid "Scroll event changes workspace"
-msgstr ""
+msgstr "La rueda del ratón cambia el espacio de trabajo"
 
 #: ../xfdashboard/windows-view.c:1713
 msgid "Whether this view should change active workspace on scroll events"
-msgstr ""
+msgstr "Si esta vista debe cambiar el espacio de trabajo actual con la rueda del ratón"
 
 #: ../xfdashboard/windows-view.c:1719
 msgid "Filter monitor windows"
-msgstr ""
+msgstr "Filtro de ventanas del monitor"
 
 #: ../xfdashboard/windows-view.c:1720
 msgid ""
 "Whether this view should only show windows of monitor where it placed at"
-msgstr ""
+msgstr "Si esta vista debe mostrar solo las ventanas del monitor donde se está usando"
 
 #: ../xfdashboard/windows-view.c:1942
 msgid "Windows"
@@ -3129,7 +3129,7 @@ msgstr "Uso de porcentaje"
 msgid ""
 "Flag indicating if maximum size is static or defined by fraction between 0.0"
 " and 1.0"
-msgstr ""
+msgstr "Bandera que indica si el tamaño máximo es estático o es definido por el porcentaje entre 0.0 y 1.0"
 
 #: ../xfdashboard/workspace-selector.c:1297
 msgid "Show current monitor only"
