--- a/po/lt.po
+++ b/po/lt.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: xfdashboard\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-03-02 19:11+0100\n"
-"PO-Revision-Date: 2016-03-07 22:57+0000\n"
+"PO-Revision-Date: 2016-04-03 20:22+0000\n"
 "Last-Translator: Moo\n"
 "Language-Team: Lithuanian (http://www.transifex.com/xfdashboard/xfdashboard/language/lt/)\n"
 "MIME-Version: 1.0\n"
@@ -986,11 +986,11 @@ msgstr ""
 #: ../libxfdashboard/applications-view.c:1323
 #: ../libxfdashboard/search-result-container.c:1258
 msgid "View mode"
-msgstr ""
+msgstr "Rodinio veiksena"
 
 #: ../libxfdashboard/applications-view.c:1324
 msgid "The view mode used in this view"
-msgstr ""
+msgstr "Šiame rodinyje naudojama rodinio veiksena"
 
 #: ../libxfdashboard/applications-view.c:1331 ../libxfdashboard/button.c:1322
 #: ../libxfdashboard/quicklaunch.c:2705 ../libxfdashboard/scrollbar.c:754
